--- a/6_mapping.Rmd
+++ b/6_mapping.Rmd
@@ -25,7 +25,7 @@ original <- readRDS('ppp_loanonly_all_loans.rds') %>%
 # This uses a slightly older version than our final dataset but the difference
 # in the number of loans is pretty negligible.
 
-new <- readRDS('ppp_allvars_1024_unemploy.rds') %>%
+new <- readRDS('most_recent_zip_nobanks_1118.rds') %>%
   select(zip) %>%
   group_by(zip) %>%
   summarize(number = n(), .groups = "drop")
@@ -96,7 +96,9 @@ ggplot(new_lat, aes(longitude, latitude)) +
   ylim(25, 50) +
   theme(axis.title = element_blank(), axis.ticks = element_blank(),
         axis.text = element_blank(), panel.grid.major = element_blank()) +
-  scale_colour_gradient(high="dark blue", low="light blue", 
+  scale_colour_gradient(high = "dark blue", low = "light blue", 
+                        breaks = waiver(), n.breaks = 4,
+                        limits = c(0, 3000),
                         name = "Number of Loans")
 ```
 
