--- a/9_new_regressions.Rmd
+++ b/9_new_regressions.Rmd
@@ -383,7 +383,7 @@ covid_check <- felm(
     stay_at_home_apr + 
     stay_at_home_current + 
     non_essential_closure_apr + 
-    non_essential_closure_current|lender|0|zip + fips + state,
+    non_essential_closure_current|lender|0|zip + fips,
   data = most_recent_both)
 
 # Regression 5: interactions
@@ -423,7 +423,7 @@ interactions_check <- felm(
     I(minority_percent * cook_pvi) +
     I(minority_percent * rural) + 
     I(minority_percent * estimate_gini_index) +
-    I(minority_percent * county_crime_rate)|lender|0|zip + fips + state,
+    I(minority_percent * county_crime_rate)|lender|0|zip + fips,
   data = most_recent_both)
 ```
 
@@ -573,103 +573,104 @@ county_interactions <- felm(business_days ~ 1 +
 
 # Negative binomial on Zip -- zero inflated negbin from the pscl library
 
-dems_binomial <- zeroinfl(business_days ~ 1 + 
-    median_family_income + 
-    minority_percent +
-    high_school_pct + 
-    married_percent + male_percent + 
-    cook_pvi + 
-    rural +
-    estimate_gini_index +
-    violent_crime_rate,
-    data = most_recent, dist = "negbin")
-
-
-loan_binomial <- glm.nb(business_days ~ 1 + 
-    median_family_income + 
-    minority_percent +
-    high_school_pct + 
-    married_percent + male_percent + 
-    cook_pvi + 
-    rural +
-    estimate_gini_index +
-    violent_crime_rate +
-    delay + 
-    loan_150_350 +
-    loan_350_1mil +
-    loan_1mil_2mil +
-    loan_2mil_5mil + 
-    loan_5mil_10mil + 
-    preference + 
-    requirement + 
-    national +
-    cu +
-    bank_ppp_issued + 
-    jobs_reported,
-    data = most_recent)
-
-econ_binomial <- glm.nb(business_days ~ 1 + 
-    median_family_income + 
-    minority_percent +
-    high_school_pct + 
-    married_percent + male_percent + 
-    cook_pvi + 
-    rural +
-    estimate_gini_index +
-    violent_crime_rate +
-    delay + 
-    loan_150_350 +
-    loan_350_1mil +
-    loan_1mil_2mil +
-    loan_2mil_5mil + 
-    loan_5mil_10mil + 
-    preference + 
-    requirement + 
-    national +
-    cu +
-    bank_ppp_issued + 
-    jobs_reported +
-    banks_per_pop + 
-    businesses_per_pop + 
-    payroll +
-    unemployment_rate_apr + 
-    unemployment_rate,
-    data = most_recent)
-
-covid_binomial <- glm.nb(business_days ~ 1 + 
-    median_family_income + 
-    minority_percent +
-    high_school_pct + 
-    married_percent + male_percent + 
-    cook_pvi + 
-    rural +
-    estimate_gini_index +
-    violent_crime_rate +
-    delay + 
-    loan_150_350 +
-    loan_350_1mil +
-    loan_1mil_2mil +
-    loan_2mil_5mil + 
-    loan_5mil_10mil + 
-    preference + 
-    requirement + 
-    national +
-    cu +
-    bank_ppp_issued + 
-    jobs_reported +
-    banks_per_pop + 
-    businesses_per_pop + 
-    payroll +
-    unemployment_rate_apr + 
-    unemployment_rate +
-    mean_start_cases_weighted +
-    mean_start_deaths_weighted + 
-    mean_end_cases_weighted +
-    mean_end_deaths_weighted,
-    data = most_recent)
+# dems_binomial <- zeroinfl(business_days ~ 1 + 
+#     median_family_income + 
+#     minority_percent +
+#     high_school_pct + 
+#     married_percent + male_percent + 
+#     cook_pvi + 
+#     rural +
+#     estimate_gini_index +
+#     violent_crime_rate,
+#     data = most_recent, dist = "negbin")
+# 
+# 
+# loan_binomial <- glm.nb(business_days ~ 1 + 
+#     median_family_income + 
+#     minority_percent +
+#     high_school_pct + 
+#     married_percent + male_percent + 
+#     cook_pvi + 
+#     rural +
+#     estimate_gini_index +
+#     violent_crime_rate +
+#     delay + 
+#     loan_150_350 +
+#     loan_350_1mil +
+#     loan_1mil_2mil +
+#     loan_2mil_5mil + 
+#     loan_5mil_10mil + 
+#     preference + 
+#     requirement + 
+#     national +
+#     cu +
+#     bank_ppp_issued + 
+#     jobs_reported,
+#     data = most_recent)
+# 
+# econ_binomial <- glm.nb(business_days ~ 1 + 
+#     median_family_income + 
+#     minority_percent +
+#     high_school_pct + 
+#     married_percent + male_percent + 
+#     cook_pvi + 
+#     rural +
+#     estimate_gini_index +
+#     violent_crime_rate +
+#     delay + 
+#     loan_150_350 +
+#     loan_350_1mil +
+#     loan_1mil_2mil +
+#     loan_2mil_5mil + 
+#     loan_5mil_10mil + 
+#     preference + 
+#     requirement + 
+#     national +
+#     cu +
+#     bank_ppp_issued + 
+#     jobs_reported +
+#     banks_per_pop + 
+#     businesses_per_pop + 
+#     payroll +
+#     unemployment_rate_apr + 
+#     unemployment_rate,
+#     data = most_recent)
+# 
+# covid_binomial <- glm.nb(business_days ~ 1 + 
+#     median_family_income + 
+#     minority_percent +
+#     high_school_pct + 
+#     married_percent + male_percent + 
+#     cook_pvi + 
+#     rural +
+#     estimate_gini_index +
+#     violent_crime_rate +
+#     delay + 
+#     loan_150_350 +
+#     loan_350_1mil +
+#     loan_1mil_2mil +
+#     loan_2mil_5mil + 
+#     loan_5mil_10mil + 
+#     preference + 
+#     requirement + 
+#     national +
+#     cu +
+#     bank_ppp_issued + 
+#     jobs_reported +
+#     banks_per_pop + 
+#     businesses_per_pop + 
+#     payroll +
+#     unemployment_rate_apr + 
+#     unemployment_rate +
+#     mean_start_cases_weighted +
+#     mean_start_deaths_weighted + 
+#     mean_end_cases_weighted +
+#     mean_end_deaths_weighted,
+#     data = most_recent)
 ```
 ```{r}
 # Trying another way of doing negative binomial w/ fixed effects
+
 dems_binomial <- fenegbin(business_days ~ 1 + 
     median_family_income + 
     minority_percent +
